--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellspacing="25">
         <tbody>
             <tr>
-                <td><img src="\html-personal-site\images\bikram.png" alt="Bikram Bhattarai" style="height: 150px;"></td>
+                <td><img src="bikram.png" alt="Bikram Bhattarai" style="height: 150px;"></td>
                 <td>    <h1>Bikram Bhattarai</h1>
                     <p> <em> Director & Instructor of <br> <a href="https://gorkhainstituteofcomputer.blogspot.com/"><b>Gorkha Institute of Computer</b></a></em></p>
                     <p>I am a Instructor of Computer. I love coffee and brew my own beers.</p></td>
