--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <td><img src="bikram.png" alt="Bikram Bhattarai" style="height: 150px;"></td>
                 <td>    <h1>Bikram Bhattarai</h1>
                     <p> <em> Director & Instructor of <br> <a href="https://gorkhainstituteofcomputer.blogspot.com/"><b>Gorkha Institute of Computer</b></a></em></p>
-                    <p>I am a Instructor of Computer. I love coffee and brew my own beers.</p></td>
+                    <p>I am a Instructor of Computer at <a href="https://www.google.com/search?authuser=0&sxsrf=ALiCzsbv_i28bvxO_3ceNedO2B9INq6yaQ:1671350807901&q=Gorkha+institute+of+computer+&stick=H4sIAAAAAAAAAONgVmJ4xKjNLfDyxz1hKaVJa05eY5Th4grOyC93zSvJLKkU4uNig7JYpJi4GHgWscq65xdlZyQqZOYVA8VLS1IV8tMUkvNzC4DMIgUAIWQEXFIAAAA&biw=1366&bih=625&dpr=1">GORKHA INSTITUTE OF COMPUTER </a>.</p></td>
             </tr>
         </tbody>
     </table>
