--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>💗 Bikram Personal's Site</title>
 </head>
 <body>
-    <table>
+    <table cellspacing="25">
         <tbody>
             <tr>
                 <td><img src="bikram.png" alt="Bikram Bhattarai" style="height: 150px;"></td>
